--- a/基础理论/理论/树.md
+++ b/基础理论/理论/树.md
@@ -12,8 +12,19 @@
  - 没有键值相等的节点（no duplicate nodes）。
 
 ## AVL树
-AVL树是根据它的发明者G.M. Adelson-Velsky和E.M. Landis命名的。它是最先发明的自平衡二叉查找树，也被称为高度平衡树。相比于"二叉查找树"，它的特点是：AVL树中任何节点的两个子树的高度最大差别为1。 
+AVL树是根据它的发明者G.M. Adelson-Velsky和E.M. Landis命名的。它是最先发明的自平衡二叉查找树，也被称为高度平衡树。相比于"二叉查找树"，它的特点是：AVL树中任何节点的两个子树的高度最大差别为1。
 
+在插入的过程中，会出现一下四种情况破坏AVL树的特性，我们可以采取如下相应的旋转：
+- 左-左型：做右旋。
+- 右-右型：做左旋转。
+- 左-右型：先做左旋，后做右旋。
+- 右-左型：先做右旋，再做左旋。
+
+平衡因子：左子树的高度减去右子树的高度。平衡因子的取值只可能为0,1,-1.分别对应着左右子树等高，左子树比较高，右子树比较高。
+
+平衡二叉树的失衡调整主要是通过旋转最小失衡子树来实现的。
+
+最小失衡子树：在新插入的结点向上查找，以第一个平衡因子的绝对值超过1的结点为根的子树称为最小不平衡子树。也就是说，一棵失衡的树，是有可能有多棵子树同时失衡的，而这个时候，我们只要调整最小的不平衡子树，就能够将不平衡的树调整为平衡的树。
 ## 伸展树
 伸展树(Splay Tree)是一种二叉排序树，它能在O(log n)内完成插入、查找和删除操作。它由Daniel Sleator和Robert Tarjan创造。
 - 伸展树属于二叉查找树，即它具有和二叉查找树一样的性质：假设x为树中的任意一个结点，x节点包含关键字key，节点x的key值记为key[x]。如果y是x的左子树中的一个结点，则key[y] <= key[x]；如果y是x的右子树的一个结点，则key[y] >= key[x]。
